# EFT_Trading

./: .env
backend/: Dockerfile  data_pipeline.py  env.py  main.py  models.py  pyproject.toml  sentiment.py  trainer.py
backend/data/: QQQ_ohlcv.csv  SPY_ohlcv.csv
docs/: README.md
frontend/: Dockerfile  index.html  package.json  tailwind.config.cjs  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: EquityChart.tsx  SentimentGauge.tsx
infra/: devcontainer.json  docker-compose.yml  start.sh
tests/: test_env_step.py  test_pipeline.py
